undirected/simulationSI/log_2026-04-24-10-23-13.txt
Traceback (most recent call last):
  File "/home/lnf/Desktop/SI_connected_undirected_skm/undirected/simulationSI/00_sim_SI_un.py", line 13, in <module>
    from sim_unit_un import *
  File "/home/lnf/Desktop/SI_connected_undirected_skm/undirected/simulationSI/sim_unit_un.py", line 448
    if processed in stability_checker:
    ^
IndentationError: expected an indented block after 'if' statement on line 445
